# minecraft-libs-parser

./: .gitignore  .pylintrc  DESC.md  README.md  dev_requiments.txt  pyproject.toml  tox.ini
minecraft_libs/: __init__.py  __main__.py
