[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "minecraft_libs"
author = "Alexander Popov"
author-email = "iiiypuk@iiiypuk.me"
requires = [ "click==7.1.2" ]
description-file = "DESC.md"
classifiers = [
	'License :: Public Domain',
    'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.7',
	'Programming Language :: Python :: 3.8',
	'Programming Language :: Python :: 3.9',
]
requires-python = ">=3"
keywords = "iOS,splashscreen,splash-screen"

[tool.flit.metadata.requires-extra]
dev = ["pylint == 2.7.1", "black == 20.8b1"]

[tool.black]
line-length = 99
